fixed spacing issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -209,6 +209,12 @@ body {
   line-height: 1.45;
   color: #333; }
 
+p {
+  margin-bottom: .7em; }
+
+.showItem {
+  margin-bottom: 0; }
+
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
   font-weight: inherit;
