--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -11,7 +11,11 @@ body {
   color: #333;
 }
 
-// p {margin-bottom: .7em;}
+p {margin-bottom: .7em;}
+
+.showItem {
+  margin-bottom: 0;
+}
 
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
